<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/text_view_add_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/add_new_ticket"
        android:textSize="28sp"
        android:layout_marginTop="15dp"
        />
    <Spinner
        android:id="@+id/spinner_ticket_type"
        android:layout_width="120dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_add_new"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="24dp"
        />

    <EditText
        android:id="@+id/est"
        android:layout_width="70dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_add_new"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:hint="Est"/>

    <Spinner
        android:id="@+id/spinner_ticket_priority"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@id/est"
        app:layout_constraintStart_toEndOf="@+id/spinner_ticket_type"
        app:layout_constraintTop_toBottomOf="@id/text_view_add_new" />

    <EditText
        android:id="@+id/text_input_ticket_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        android:hint="@string/ticket_title"
        android:inputType="text"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_ticket_priority" />

    <EditText
        android:id="@+id/text_input_ticket_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:hint="@string/ticket_description"
        android:inputType="textMultiLine"
        android:lines="2"
        android:maxLines="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_ticket_title" />

    <Button
        android:id="@+id/btn_add_new_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/add_new_ticket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_ticket_description" />
</androidx.constraintlayout.widget.ConstraintLayout>